Project iCorrespondencia {
    database_type: 'PostgreSQL'

    Note: '''
    iCorrespondência database model
    '''
}

Enum person_type {
    F
    J
}

Table person {
    id bigint [pk, increment, not null]
    name varchar(255) [not null]
    public_id uuid [not null]
    created_at timestamp [default: `now()`, not null]
    excluded_at timestamp
    active boolean [default: true, not null]
    person_type person_type [not null]
    updated_at timestamp
}

Table users {
    id bigint [not null, ref: - person.id]
    email varchar(255) [unique]
    username varchar(20) [unique, not null]
    password varchar(128) [not null]

    Indexes {
        id [pk]
    }
}

Table townhouse {
    id bigint [not null, ref: - person.id]
    email varchar(255) [unique]
    cnpj varchar(18) [unique, not null]
    site varchar(255)
    phone varchar(11)

    Indexes {
        id [pk]
    }
}

Table block {
    id bigint [pk, increment, not null]
    townhouse_id bigint [not null, ref: > townhouse.id]
    name varchar(25) [not null]
}

Table room {
    id bigint [pk, increment, not null]
    block_id bigint [not null, ref: > block.id]
    number smallint [not null]
}

Table delivery {
    id bigint [pk, increment, not null]
    room_id bigint [not null, ref: > room.id]
    delivery_date timestamp [not null]
    read boolean [default: false, not null]
    read_at timestamp
}

Table users_roles {
    role_id bigint [not null, ref: > role.id]
    user_id bigint [not null, ref: > users.id]
}

Table role {
    id bigint [pk, increment, not null]
    name role_type [default: 'ROLE_USER', not null]
    townhouse_id bigint [not null, ref: - townhouse.id]
    room_id bigint [ref: - room.id]
}

Enum role_type {
    ROLE_USER
    ROLE_ADMIN
}
